# derp-workspace

./: .gitignore  AGENTS.md  Cargo.toml  File browser plan.md  MANUAL_CHECKLIST.md  MVP_STEPS.md  PERFORMANCE_TASKS.md  README.md  ROADMAP.md
.githooks/: pre-commit
.github/workflows/: ci.yml
cef_host/: Cargo.toml  build.rs
cef_host/src/: compositor_downlink.rs  control_server.rs  desktop_apps.rs  frame_sink.rs  ipc_coalesce.rs  lib.rs  main.rs  osr_view_state.rs  shell_uplink.rs
cef_host/tests/: subprocess_argv.rs
compositor/: Cargo.toml  build.rs
compositor/src/: audio_control.rs  backdrop_render.rs  calloop_xwm.rs  capture.rs  capture_ext.rs  chrome_bridge.rs  cursor_fallback.rs  derp_space.rs  derp_space_render.rs  desktop_app_usage.rs  desktop_background.rs  desktop_stack.rs  display_config.rs  drm.rs  e2e.rs  exclusion_clip.rs  gdm_settings.rs  gpu_tests.rs  headless.rs  input.rs  json_state.rs  layout.rs  lib.rs  main.rs  pointer_render.rs  renderer_smoke.rs  screenshot.rs  screenshot_overlay_render.rs  session_state.rs  settings_config.rs  shell_backed.rs  shell_encode.rs  shell_ipc.rs  shell_letterbox.rs  shell_overlay.rs  shell_render.rs  shell_shm.rs  shell_unix_msg.rs  sidecar.rs  sni_tray.rs  (+10 more)
compositor/src/api/: chrome_bridge.rs  derp_space.rs  mod.rs  sidecar.rs  window_ops.rs  window_registry.rs
compositor/src/cef/: begin_frame_diag.rs  bridge.rs  compositor_downlink.rs  compositor_tx.rs  control_server.rs  desktop_apps.rs  e2e_bridge.rs  file_browser.rs  file_browser_fixtures.rs  frame_sink.rs  gnome_background.rs  gnome_wallpaper_list.rs  mod.rs  runner.rs  shared_state.rs  shell_snapshot.rs  shell_snapshot_model.rs  shell_uplink.rs  uplink.rs
compositor/src/control/: mod.rs
compositor/src/controls/: battery_control.rs  bluetooth_control.rs  display_config.rs  mod.rs  volume.rs  wifi_control.rs
compositor/src/desktop/: desktop_app_usage.rs  desktop_background.rs  desktop_stack.rs  exclusion_clip.rs  mod.rs
compositor/src/e2e/: mod.rs
compositor/src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
compositor/src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs
compositor/src/input/: mod.rs
compositor/src/notifications/: mod.rs
compositor/src/platform/: calloop_xwm.rs  cursor_fallback.rs  drm.rs  mod.rs  wayland_listener.rs  xwayland.rs
compositor/src/render/: backdrop_render.rs  capture.rs  capture_ext.rs  derp_space_render.rs  mod.rs  pointer_render.rs  screenshot.rs  screenshot_overlay_render.rs  shell_render.rs  tile_preview_render.rs
compositor/src/session/: json_state.rs  mod.rs  session_state.rs  settings_config.rs  taskbar_pins.rs  workspace_model.rs
compositor/src/shell/: mod.rs  shell_backed.rs  shell_encode.rs
compositor/src/state/: background.rs  capture.rs  core.rs  explicit_sync.rs  focus_stack.rs  input_routing.rs  keyboard_session_input.rs  lock_screen.rs  mod.rs  native_window_ops.rs  osk_runtime.rs  output_layout_runtime.rs  outputs.rs  protocols.rs  render_workspace.rs  scratchpads.rs  screenshot_requests.rs  session_services.rs  shell_ipc_cef.rs  shell_move_resize.rs  shell_osr.rs  shell_snapshot.rs  shell_ui.rs  spawn_runtime.rs  tests.rs  tray_notifications.rs  tray_runtime.rs  windows.rs  workspace.rs  workspace_layout.rs  workspace_session.rs  x11.rs  x11_runtime.rs
compositor/src/tray/: mod.rs  sni_tray.rs
compositor/tests/: chrome_bridge_lifecycle.rs  headless_client_connect.rs  shell_chrome_list_ipc.rs  shell_frame_screenshot.rs  shell_quit_ipc.rs  shell_spawn_from_ipc.rs  solid_shell_e2e.rs
docs/: ai-port-from-derp-media-server.md  overlay-contract.md  testing-contract.md  window-behavior-contract.md
e2e-test-client/: Cargo.toml
e2e-test-client/src/: main.rs
resources/: derp-wayland.desktop  derp-xdg-desktop-portal-wlr.conf.in  workspace-protocol.json
scripts/: codex-remote-triage.sh  derp-screencast-picker.sh  derp-session.local.env.example  derp-session.sh  e2e-perf-remote.sh  e2e-remote-combinations.sh  e2e-remote.sh  ensure-shell-node-modules.sh  fetch-e2e-artifacts.sh  fetch-logs.sh  install-git-hooks.sh  install-system-run.sh  install-system.sh  kill-remote-compositor.sh  launch-cef-to-compositor.sh  list-derp-logs.sh  nested-smoke.sh  new-shell-app.mjs  patch-smithay-shell-osk.sh  remote-common.sh  remote-harness.sh  remote-install.env.example  remote-install.sample.md  remote-install.sh  remote-update-and-restart.sh  remote-verify.sh  run-cef-host.sh  run-nested.sh  verify.sh
shell/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts
shell/e2e/: check-boundaries.mjs  harness.mjs  harness.ts  run.mjs  run.ts
shell/src/: App.css  App.tsx  FileBrowserWindow.tsx  LayoutTypePicker.tsx  Select.test.tsx  Select.tsx  SettingsPanel.tsx  ShellFloatingContext.tsx  ShellWindowFrame.tsx  SnapAssistMasterGrid.tsx  SnapAssistPicker.tsx  Taskbar.tsx  TransformPicker.tsx  WorkspaceTabStrip.tsx  assistGrid.ts  audioEvents.test.ts  backedShellWindows.test.ts  backedShellWindows.ts  chromeConstants.ts  compositorEvents.ts  compositorModel.ts  compositorSnapshot.ts  contextMenu.tsx  desktopAppSearch.test.ts  desktopAppSearch.ts  desktopAppUsage.test.ts  desktopAppUsage.ts  desktopApplicationsState.test.ts  desktopApplicationsState.ts  e2eSnapshot.ts  exclusionRects.test.ts  exclusionRects.ts  fileBrowserBridge.ts  fileBrowserPrefs.ts  index.css  (+32 more)
shell_wire/: Cargo.toml
wire_schema/: generate.mjs  schema.json
(+305 files in other folders)
