[package]
name = "compositor"
version = "0.1.0"
edition = "2021"
description = "Minimal Smithay Wayland compositor with CEF IPC"
default-run = "compositor"

[dependencies]
bitflags = "2.2.1"
clap = { version = "4", features = ["derive"] }
shell_wire = { path = "../shell_wire" }
smithay = { version = "0.7.0", default-features = false, features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "use_system_lib",
    "xwayland",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
signal-hook = "0.3"
xcursor = "0.3.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["socket", "uio"] }

[[bin]]
name = "compositor"
path = "src/main.rs"
