[package]
name = "compositor"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Minimal Smithay Wayland compositor with embedded CEF shell"
default-run = "compositor"

[dependencies]
bitflags = "2.2.1"
cef = { version = "146", default-features = false }
cef-dll-sys = { version = "146", default-features = true }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
drm-fourcc = "2.2"
input = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell_wire = { path = "../shell_wire" }
smithay = { version = "0.7.0", default-features = false, features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "use_system_lib",
    "xwayland",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
signal-hook = "0.3"
xcursor = "0.3.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["socket", "uio"] }

[[bin]]
name = "compositor"
path = "src/main.rs"
