[package]
name = "compositor"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Minimal Smithay Wayland compositor with embedded CEF shell"
default-run = "compositor"

[dependencies]
bitflags = "2.2.1"
cef = { version = "147", default-features = false }
cef-dll-sys = { version = "147", default-features = true }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
drm-fourcc = "2.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
jxl-oxide = { version = "0.12.5", features = ["image"] }
input = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell_wire = { path = "../shell_wire" }
smithay = { git = "https://github.com/Smithay/smithay.git", rev = "5312d5caedd0c2ce563a63719d38ae2183149210", default-features = false, features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "use_system_lib",
    "xwayland",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
udev = "0.9.3"
signal-hook = "0.4"
wayland-protocols-wlr = { version = "0.3.12", features = ["server"] }
wayland-protocols = { version = "0.32.12", features = ["server", "staging"] }
xcursor = "0.3.10"
notify = "8.2.0"
zbus = "5.14"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", default-features = false, features = ["socket", "uio"] }

[[bin]]
name = "compositor"
path = "src/main.rs"

[[bin]]
name = "derpctl"
path = "src/bin/derpctl.rs"
